# transformer-from-scratch

./: .env.example  .gitignore  README.md  count_token.py  environment-cpu.yml  environment-gpu.yml  hostfile.example  install_env.sh  preprocess.py  pyproject.toml  run_dist.sh  train.py
configs/: config_de-en.yaml  config_de-en_smoke.yaml
src/: config.py
src/components/: input_embedding.py  positional_encoding.py
src/transformer/: __init__.py  config.py  transformer.py
src/transformer/components/: decoder.py  decoder_block.py  decoder_layer.py  decoding.py  encoder.py  encoder_block.py  encoder_layer.py  feed_forward.py  layer_norm.py  multi_head.py  positional_encoding.py
src/transformer/components/base/: attention.py  feed_forward.py  positional_encoding.py
tests/: test_transformer.py
tests/components/: test_decoder.py  test_decoder_block.py  test_decoder_layer.py  test_encoder.py  test_encoder_block.py  test_encoder_layer.py  test_feed_forward.py  test_input_embedding.py  test_layer_norm.py  test_multi_head.py  test_positional_encoding.py
